Fix mobile home header spacing

--- a/css/index.css
+++ b/css/index.css
@@ -64,6 +64,7 @@ html p {
 }
 @media (max-width: 500px) {
   .header {
+    height: 278px;
     background-size: contain;
     background-repeat: no-repeat;
   }
@@ -81,7 +82,7 @@ html p {
   .header h2 {
     font-size: 3rem;
     position: absolute;
-    bottom: 58%;
+    bottom: 10%;
     left: 5%;
   }
 }
