--- a/less/home.less
+++ b/less/home.less
@@ -4,6 +4,7 @@
   position: relative;
 
   @media @mobile500 {
+    height: 278px;
     background-size: contain;
     background-repeat: no-repeat;
   }
@@ -20,7 +21,7 @@
     @media @mobile500 {
       font-size: 3rem;
       position: absolute;
-      bottom: 58%;
+      bottom: 10%;
       left: 5%;
     }
   }
